force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient__c/Apttus_DocuApi__DocuSignDefaultRecipient__c.object-meta.xml
<CustomObject>
    <description>Deprecated.</description>
    <label>DocuSign Default Recipient (Deprecated)</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Default Recipients (Deprecated)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>