force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient__c/fields/Apttus_CMDSign__Agreement__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMDSign__Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the agreement associated with the recipient</description>
    <inlineHelpText>ID of the agreement associated with the recipient</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipName>DocuSignDefaultRecipients</relationshipName>
    <type>Lookup</type>
</CustomField>