force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient__c/fields/Apttus_DocuApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact as look-up</description>
    <inlineHelpText>Contact as look-up</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>DocuSignDefaultRecipients</relationshipName>
    <type>Lookup</type>
</CustomField>