force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient__c/fields/Apttus_DocuApi__Email__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__Email__c</fullName>
    <description>Email</description>
    <inlineHelpText>Email</inlineHelpText>
    <label>Recipient Email Address</label>
    <type>Email</type>
</CustomField>