force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient__c/fields/Apttus_DocuApi__ReadOnlyEmail__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__ReadOnlyEmail__c</fullName>
    <formula>IF( (ISBLANK(Apttus_DocuApi__Contact__c ))  , 
    IF( (ISBLANK( Apttus_DocuApi__User__c  )) ,   Apttus_DocuApi__Email__c 
        , Apttus_DocuApi__User__r.Email   
         
    ),  
     Apttus_DocuApi__Contact__r.Email 
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>