force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient__c/fields/Apttus_DocuApi__ReadOnlyLastName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__ReadOnlyLastName__c</fullName>
    <formula>IF( (ISBLANK(Apttus_DocuApi__Contact__c ))  , 
    IF( (ISBLANK( Apttus_DocuApi__User__c  )) ,     Apttus_DocuApi__LastName__c  
        ,   Apttus_DocuApi__User__r.LastName     
         
    ),  
     Apttus_DocuApi__Contact__r.LastName 
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>