force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient__c/fields/Apttus_DocuApi__RecipientType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__RecipientType__c</fullName>
    <description>Recipient Type list will come from UI</description>
    <inlineHelpText>Recipient Type list will come from UI</inlineHelpText>
    <label>Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Signer</fullName>
                <default>true</default>
                <label>Signer</label>
            </value>
            <value>
                <fullName>Carbon Copy</fullName>
            </value>
            <value>
                <fullName>In Person Signer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>