force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient__c/fields/Apttus_DocuApi__SigningOrder__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__SigningOrder__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Signing Order default</description>
    <inlineHelpText>Signing Order default</inlineHelpText>
    <label>Signing Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>