force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient__c/fields/Apttus_QPDSign__QuoteProposal__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPDSign__QuoteProposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the quote/proposal associated with the recipient</description>
    <inlineHelpText>ID of the quote/proposal associated with the recipient</inlineHelpText>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipName>DocuSignDefaultRecipients</relationshipName>
    <type>Lookup</type>
</CustomField>