force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient__c/recordTypes/Apttus_DocuApi__Contact.recordType-meta.xml
<RecordType>
    <fullName>Apttus_DocuApi__Contact</fullName>
    <active>true</active>
    <description>Contact  lookup</description>
    <label>Contact</label>
</RecordType>