force-app/main/default/objects/Apttus_DocuApi__DocuSignDefaultRecipient__c/recordTypes/Apttus_DocuApi__User.recordType-meta.xml
<RecordType>
    <fullName>Apttus_DocuApi__User</fullName>
    <active>true</active>
    <description>User lookup</description>
    <label>User</label>
</RecordType>